<resources>
    <string name="app_name">ShibaCha</string>
    <string name="ok_button">OK</string>
    <string name="name_field">Name</string>
    <string name="email_field">Email</string>
    <string name="age_field">Age</string>
    <string name="male_option">Male</string>
    <string name="female_option">Female</string>
    <string name="others_option">Others</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="password_field">Password</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_fragment">Favorite Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="setting_fragment">Setting Fragment</string>
    <string name="hobbies_title">Hobbies</string>
    <string name="join">JOIN +</string>
    <string name="gender_header">Gender:</string>
    <string name="desc_field">Enter Community Description</string>
    <string name="comm_name_field">Enter Community Name</string>
    <string name="image_field">Enter Image Link (direct link that has the image file referred inside)</string>
    <string name="button_create">create</string>
    <string name="update_button">Update</string>
    <string name="RVitem_name">Community Name</string>
    <string name="description">Description:</string>
    <string name="name">Name:</string>
    <string name="logout">Logout</string>
    <string name="community_name">Community Name</string>
    <string name="category">Category</string>
    <string name="pick_your_hobbies">Pick Your Hobbies!</string>
</resources>