<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisActivity">

    <ImageView
        android:id="@+id/tea_img"
        android:layout_width="188dp"
        android:layout_height="257dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/ok_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/basic_tea" />

    <ImageView
        android:id="@+id/smoke_trail"
        android:layout_width="283dp"
        android:layout_height="239dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/smoke_trail" />

    <ImageView
        android:id="@+id/steam_bubble"
        android:layout_width="446dp"
        android:layout_height="353dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@id/tea_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/smoke_white" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_field"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/name_field"
        app:layout_constraintBottom_toBottomOf="@id/steam_bubble"
        app:layout_constraintEnd_toEndOf="@id/steam_bubble"
        app:layout_constraintStart_toStartOf="@id/steam_bubble"
        app:layout_constraintTop_toTopOf="@id/steam_bubble"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_field_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_field"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_field"
        app:layout_constraintBottom_toBottomOf="@id/steam_bubble"
        app:layout_constraintEnd_toEndOf="@id/steam_bubble"
        app:layout_constraintStart_toStartOf="@id/steam_bubble"
        app:layout_constraintTop_toTopOf="@id/steam_bubble"
        android:visibility="invisible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_field_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age_field"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/age_field"
        app:layout_constraintBottom_toBottomOf="@id/steam_bubble"
        app:layout_constraintEnd_toEndOf="@id/steam_bubble"
        app:layout_constraintStart_toStartOf="@id/steam_bubble"
        app:layout_constraintTop_toTopOf="@id/steam_bubble"
        android:visibility="invisible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age_field_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/gender_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/steam_bubble"
        app:layout_constraintEnd_toEndOf="@id/steam_bubble"
        app:layout_constraintStart_toStartOf="@id/steam_bubble"
        app:layout_constraintTop_toTopOf="@id/steam_bubble"
        android:visibility="invisible">

        <RadioButton
            android:id="@+id/male_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_option"/>

        <RadioButton
            android:id="@+id/female_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_option"/>

        <RadioButton
            android:id="@+id/other_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others_option"/>

    </RadioGroup>

    <Button
        android:id="@+id/ok_button"
        android:layout_width="259dp"
        android:layout_height="48dp"
        android:text="@string/ok_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tea_img" />


</androidx.constraintlayout.widget.ConstraintLayout>